removed nba-data-scraper related files

--- a/nba-airflow/core/sqlalchemyv2.ipynb
+++ b/nba-airflow/core/sqlalchemyv2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,8 @@
     "import hashlib\n",
     "import numpy as np\n",
     "\n",
+    "# Internal Imports\n",
+    "from \n",
     "# show all columns\n",
     "pd.set_option('display.max_columns', None)"
    ]
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = r'C:\\Users\\lianz\\Python\\personal_projects\\nba_airflow\\data'\n",
+    "data_dir = r'C:\\Users\\lianz\\Python\\personal_projects\\nba-airflow\\data'\n",
     "player_shotLocations = pd.read_csv(f\"{data_dir}\\player_shotLocations.csv\", skipinitialspace=True, index_col=0)\n",
     "games_played = pd.read_csv(f\"{data_dir}\\games_played.csv\", parse_dates=['DateTime'])\n",
     "players = pd.read_csv(f'{data_dir}\\players.csv', parse_dates=['BirthDate'], names=['PlayerName', 'FromYear', 'ToYear', 'PositionID', 'Height', 'Weight', 'BirthDate', 'College'], header=0)\n",
@@ -73,8 +75,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get all teams"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team = games_played[['Home','Home_short']].drop_duplicates().sort_values(by=['Home']).set_index('Home_short').reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Insert Positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -98,115 +123,76 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PlayerName</th>\n",
-       "      <th>FromYear</th>\n",
-       "      <th>ToYear</th>\n",
        "      <th>PositionID</th>\n",
-       "      <th>Height</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>BirthDate</th>\n",
-       "      <th>College</th>\n",
+       "      <th>PositionName</th>\n",
+       "      <th>Description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2312</th>\n",
-       "      <td>Nikola Jokić</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2023</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>F-C</td>\n",
+       "      <td>Forward-center</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>C-F</td>\n",
-       "      <td>6-11</td>\n",
-       "      <td>284.0</td>\n",
-       "      <td>1995-02-19</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Center-forward</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2390</th>\n",
-       "      <td>Nikola Jović</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>G-F</td>\n",
-       "      <td>6-10</td>\n",
-       "      <td>209.0</td>\n",
-       "      <td>2003-06-09</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Center</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3119</th>\n",
-       "      <td>Nikola Mirotić</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2019</td>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>G</td>\n",
+       "      <td>Guard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>F</td>\n",
-       "      <td>6-10</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>1991-02-11</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Forward</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3544</th>\n",
-       "      <td>Nikola Peković</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>C</td>\n",
-       "      <td>6-11</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>1986-01-03</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>G-F</td>\n",
+       "      <td>Guard-forward</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4665</th>\n",
-       "      <td>Nikola Vučević</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>C</td>\n",
-       "      <td>6-10</td>\n",
-       "      <td>260.0</td>\n",
-       "      <td>1990-10-24</td>\n",
-       "      <td>USC</td>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>F-G</td>\n",
+       "      <td>Forward-guard</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          PlayerName  FromYear  ToYear PositionID Height  Weight  BirthDate  \\\n",
-       "2312    Nikola Jokić      2016    2023        C-F   6-11   284.0 1995-02-19   \n",
-       "2390    Nikola Jović      2023    2023        G-F   6-10   209.0 2003-06-09   \n",
-       "3119  Nikola Mirotić      2015    2019          F   6-10   250.0 1991-02-11   \n",
-       "3544  Nikola Peković      2011    2016          C   6-11   307.0 1986-01-03   \n",
-       "4665  Nikola Vučević      2012    2023          C   6-10   260.0 1990-10-24   \n",
-       "\n",
-       "     College  \n",
-       "2312     NaN  \n",
-       "2390     NaN  \n",
-       "3119     NaN  \n",
-       "3544     NaN  \n",
-       "4665     USC  "
+       "   PositionID PositionName     Description\n",
+       "0           1          F-C  Forward-center\n",
+       "1           2          C-F  Center-forward\n",
+       "2           3            C          Center\n",
+       "3           4            G           Guard\n",
+       "4           5            F         Forward\n",
+       "5           6          G-F   Guard-forward\n",
+       "6           7          F-G   Forward-guard"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "players[players['PlayerName'].str.contains('Nikola')]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Insert Positions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "positions = pd.read_csv(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\position.csv')\n",
+    "positions = pd.read_csv(f'{data_dir}\\\\position.csv')\n",
     "positions"
    ]
   },
@@ -243,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players = pd.read_csv(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\players.csv', parse_dates=['BirthDate'], names=['PlayerName', 'FromYear', 'ToYear', 'PositionID', 'Height', 'Weight', 'BirthDate', 'College'], header=0)\n",
+    "players = pd.read_csv(f'{data_dir}\\players.csv', parse_dates=['BirthDate'], names=['PlayerName', 'FromYear', 'ToYear', 'PositionID', 'Height', 'Weight', 'BirthDate', 'College'], header=0)\n",
     "\n",
     "# Read positions from sql\n",
     "with nba.engine.connect() as connection:\n",
@@ -364,131 +350,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arena = teams[['Arena', 'Attendance']].groupby('Arena').max().reset_index()\n",
+    "arena = games_played[['Arena', 'Attendance']].groupby('Arena').max().reset_index()\n",
     "arena.columns = ['ArenaName', 'Capacity']\n",
-    "arena.to_csv(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\arena.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ArenaName</th>\n",
-       "      <th>Capacity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ARCO Arena (II)</td>\n",
-       "      <td>17317.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AT&amp;T Center</td>\n",
-       "      <td>19615.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AccorHotels Arena</td>\n",
-       "      <td>15885.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Air Canada Centre</td>\n",
-       "      <td>21050.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Alamodome</td>\n",
-       "      <td>68323.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>Visa Athletic Center</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>Vivint Arena</td>\n",
-       "      <td>18206.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>Vivint Smart Home Arena</td>\n",
-       "      <td>19911.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>Wachovia Center</td>\n",
-       "      <td>21068.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>Wells Fargo Center</td>\n",
-       "      <td>21509.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>93 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  ArenaName  Capacity\n",
-       "0           ARCO Arena (II)   17317.0\n",
-       "1               AT&T Center   19615.0\n",
-       "2         AccorHotels Arena   15885.0\n",
-       "3         Air Canada Centre   21050.0\n",
-       "4                 Alamodome   68323.0\n",
-       "..                      ...       ...\n",
-       "88     Visa Athletic Center       NaN\n",
-       "89             Vivint Arena   18206.0\n",
-       "90  Vivint Smart Home Arena   19911.0\n",
-       "91          Wachovia Center   21068.0\n",
-       "92       Wells Fargo Center   21509.0\n",
-       "\n",
-       "[93 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 216,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arena = pd.read_csv(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\arena.csv')\n",
-    "arena"
+    "arena.to_csv(r'C:\\Users\\lianz\\Python\\personal_projects\\nba-airflow\\data\\arena.csv', index=False)"
    ]
   },
   {
@@ -528,7 +396,7 @@
     }
    ],
    "source": [
-    "\n",
+    "arena = pd.read_csv(r'C:\\Users\\lianz\\Python\\personal_projects\\nba-airflow\\data\\arena.csv')\n",
     "# Disable FK constrains and set IDENTITY_INSERT to ON\n",
     "with nba.engine.connect() as connection:\n",
     "    connection.execute(text(\"EXEC sp_MSforeachtable @command1='ALTER TABLE ? NOCHECK CONSTRAINT ALL'\"))\n",
@@ -557,7 +425,7 @@
    "outputs": [],
    "source": [
     "# Get unique teams from games_played\n",
-    "games_played[['Home', 'Home_short']].drop_duplicates().reset_index(drop=True).to_csv(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\team.csv', index=False)"
+    "games_played[['Home', 'Home_short']].drop_duplicates().reset_index(drop=True).to_csv(r'C:\\Users\\lianz\\Python\\personal_projects\\nba-airflow\\data\\team.csv', index=False)"
    ]
   },
   {
@@ -635,7 +503,7 @@
     }
    ],
    "source": [
-    "teams = pd.read_csv(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\team.csv', names=['TeamName', 'TeamShort'], header=0)\n",
+    "teams = pd.read_csv(r'C:\\Users\\lianz\\Python\\personal_projects\\nba-airflow\\data\\team.csv', names=['TeamName', 'TeamShort'], header=0)\n",
     "teams.head()"
    ]
   },
